2004-09-21 Mikhail Khodjaiants
	Fixed the problems with the Disassembly view and address breakpoints caused by switch to IAddress.
	* CBreakpointPropertyPage.java
	* DisassemblyEditorInput.java

2004-09-20 Mikhail Khodjaiants
	Fix for bug 73920: Stopping CDT debug at a break point and using a non-text editor throws an error.
	* ResumeAtLineActionDelegate.java
	* RunToLineAdapter.java
	* ToggleBreakpointAdapter.java

2004-09-20 Mikhail Khodjaiants
	Evaluate expressions on stack frame instead of target to provide evaluation context.
	Evaluate the hovering expression for the selected context only.
	* DebugTextHover.java

2004-09-17 Alain Magloire
	Support for 64 bits application
	PR 74056. Pathc from Artyom Kuanbekov
	To much files to enumerate.

2004-09-15 Mikhail Khodjaiants
	Removed the "ISwitchToThread" and "ISwitchToFrame" interfaces.
	* CDebugUIPlugin.java

2004-09-13 Mikhail Khodjaiants
	Fix for bug 72555: "Toggle breakpoint" action doesn't remove function breakpoints from editor.
	* DisassemblyEditorInput.java
	* ToggleBreakpointAdapter.java

2004-09-10 Mikhail Khodjaiants
	Fixes for breakpoint filtering.
	* CBreakpointUpdater.java
	* ThreadFilterEditor.java

2004-09-01 Mikhail Khodjaiants
	Fix for bug 73197: DisassemblyEditorInput.getAddress can crash.
	* DisassemblyEditorInput.java

2004-09-01 Mikhail Khodjaiants
	Breakpoint filtering by targets (ui).
	* PropertyPageMessages.properties
	* CBreakpointFilteringPage.java
	* ThreadFilterEditor.java

2004-08-25 Mikhail Khodjaiants
	Added the "Filtering" page to the breakpoint properties.
	* CBreakpointWorkbenchAdapterFactory.java: new
	* CDebugUIMessages.properties
	* PropertyPageMessages.properties
	* CBreakpointFilteringPage.java: new
	* ThreadFilterEditor.java: new
	* plugin.xml
	* plugin.properties

2004-08-24 Mikhail Khodjaiants
	Moved the property pages and related classes into the newly created package - "org.eclipse.cdt.debug.internal.ui.propertypages".
	* PropertyPageMessages.properties: new