@@ -1,3 +1,7 @@
+2004-10-06 Mikhail Khodjaiants
+	Use the same approach to generate expressions and variables labels.
+	* CDTDebugModelPresentation.java
+
 2004-09-21 Mikhail Khodjaiants
 	Fixed the problems with the Disassembly view and address breakpoints caused by switch to IAddress.
 	* CBreakpointPropertyPage.java
